# jiratime

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  log_work.py  pyproject.toml
.github/: renovate.json
.github/workflows/: release-please.yml  renovate-bot.yml
jiratime/: __init__.py
test/: sample_config.yaml
