[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jiratime"
version = "1.0.0"
description = "Submits time for worked hours in CTS Appsbroker Jira."
authors = ["Svetlin Zamfirov <svetlin.zamfirov@cts.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.32.0"
pyyaml = "^6.0.1"
rich = "^13.7.1"

[tool.poetry.scripts]
jiratime = "jiratime:main"
